# pypackage_template

./: README.md  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
API/: index.html
docs/: API.md
