[tool.poetry]
name = "pypackage_template"
version = "0.0.1"
description = "An example package template"
authors = ["A Template"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
